# PreprocessingForLife

./: .gitignore  Cargo.toml  README.md  set_networking.sh
.cargo/: config.toml
benches/: circuit_eval.rs  codes.rs  double_prg.rs  dpf.rs  hash.rs  mem.rs  mersenne_vs_bin.rs  mul_benchmark.rs  parallel.rs  prf.rs  prg.rs  sparse_vole.rs  spdz.rs  zkfliop.rs
circuits/: prexor_256.txt  xor_reverse.txt
examples/: mpc_online.rs  searchable_encryption_deal.rs
fields/: Cargo.toml
fields/benches/: mul_benchmark.rs
fields/src/: gf128.rs  gf2.rs  lib.rs
non-committing-encryption/: Cargo.toml
non-committing-encryption/src/: lib.rs
ot/: Cargo.toml
ot/src/: lib.rs
ot/src/receiver/: mod.rs
ot/src/sender/: mod.rs
pcg/: Cargo.toml
pcg/.cargo/: config.toml
pcg/benches/: sparse_vole.rs
pcg/src/: lib.rs  sparse_vole.rs
pcg/src/codes/: mod.rs
pcg/src/ot/: mod.rs
pcg/src/pprf_aggregator/: mod.rs
pcg/src/sparse_vole/: mod.rs  scalar_party.rs  vector_party.rs
pprf/: Cargo.toml
pprf/benches/: double_prg.rs
pprf/src/: lib.rs
pprf/src/distributed_generation/: mod.rs
scripts/: build_hw_circuit.py
scripts/benches/: silver.sh  softspoken_ot.sh
src/: commitment.rs  lib.rs  uc_tags.rs  zkfliop.rs
src/circuit_eval/: bristol_fashion.rs  malicious.rs  mod.rs  semi_honest.rs  verify.rs
src/circuit_eval/gates/: and.rs  mod.rs  not.rs  wide_and.rs  xor.rs
src/circuit_eval/spdz/: mod.rs
src/communicator/: mod.rs
src/dpf/: mod.rs
src/dpf/dpf_pir/: mod.rs
src/engine/: mod.rs  network_router.rs
src/fields/: Cargo.toml  gf128.rs  gf2.rs  gf64.rs  gf_mersenne.rs  mod.rs  packed_gf2.rs
src/non_committing_encryption/: mod.rs
src/ot/: Cargo.toml  mod.rs
src/ot/receiver/: mod.rs
src/ot/sender/: mod.rs
src/pcg/: Cargo.toml  beaver_triples.rs  bit_beaver_triples.rs  full_key.rs  mod.rs  packed_random_bit_ot.rs  preprocessor.rs  random_bit_ot.rs  receiver_key.rs  sender_key.rs
src/pcg/codes/: mod.rs
src/pcg/ot/: mod.rs
src/pcg/pprf_aggregator/: mod.rs
src/pcg/random_ot/: mod.rs
src/pcg/sparse_vole/: mod.rs  packed.rs  scalar_party.rs  vector_party.rs
src/pprf/: mod.rs
src/pprf/distributed_generation/: mod.rs
src/pseudorandom/: hash.rs  mod.rs  prf.rs  prg.rs
src/zkfliop/: mod.rs  ni.rs
