[package]
name = "silent_party"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8"
once_cell = "1.12"
rayon = "1.5.3"
curve25519-dalek = "3"
blake3 = "1"
rand_core = { version="^0.5", features=["getrandom"], default-features=false}
rand = "0.8.5"

[dev-dependencies]
criterion = "0.3"

[features]
default = ["aesni"]
aesni = []

[[bench]]
name = "double_prg"
harness = false

[[bench]]
name = "sparse_vole"
harness = false

[[bench]]
name = "mul_benchmark"
harness = false