[package]
name = "silent_party"
authors = ["Matan Hamilis <matan.hamilis@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8"
once_cell = "1.12"
rayon = "1.5.3"
curve25519-dalek = { version="3", features=["serde"]}
blake3 = "1"
rand_core = { version="^0.5", features=["getrandom"], default-features=false}
rand = "0.8"
log = "0.4"
serde = { version = "1.0", features=["derive"]}
ciborium = "0.2"
serde-big-array = "0.4"

[dev-dependencies]
criterion = "0.3"
pretty_env_logger = "0.4.0"
clap = { version="3.2", features = ["derive"]}
clap-verbosity-flag = "1.0.1"

[features]
default = ["aesni"]
aesni = []

[[bench]]
name = "double_prg"
harness = false

[[bench]]
name = "sparse_vole"
harness = false

[[bench]]
name = "mul_benchmark"
harness = false

[[bench]]
name = "circuit_eval"
harness = false

[[bench]]
name = "codes"
harness = false

[[bench]]
name = "prf"
harness = false

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "mem"
harness = false
