[package]
name = "fields"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = { version="^0.5", features=["getrandom"], default-features=false}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "mul_benchmark"
harness = false