[package]
name = "pprf"
version = "0.1.0"
edition = "2021"

[features]
default = ["aesni"]
aesni = []

[dependencies]
ot = {path = "../ot"}
rand_chacha = "0.3.1"
rand = "0.8.5"
aes = "0.8"
once_cell = "1.12"
rayon = "1.5.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "double_prg"
harness = false