# [package]
# name = "pcg"
# version = "0.1.0"
# edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# rand_core = { version="^0.5", features=["getrandom"], default-features=false }
# rand = { version="^0.7", features=["alloc", "getrandom"], default-features=false }
# rand_chacha = "^0.2"
# fields = {path = "../fields"}
# pprf = {path = "../pprf"}
# aes = "0.8"
# rayon = "1.5.3"

# [dev-dependencies]
# criterion = "0.3"

[[bench]]
name = "sparse_vole"
harness = false